[package]
name = "rust-astar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid-point = "0.1.0"

[package.metadata.scripts]
test-perf = "cargo test -- --nocapture --test-threads=1"
check = "cargo clippy --all-targets --all-features -- -D warnings"
